# django-interval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: add-to-project.yml  django-tests.yml  gitlint.yml  publish.yml  release-please.yml  ruff-format.yml
src/django_interval/: fields.py  filters.py  utils.py
src/django_interval/static/js/: intervalwidget.js
src/tests/: test_field.py
tests/: test_field.py
