[project]
name = "django-interval"
version = "0.5.1"
description = "A Django field for storing fuzzy date information"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
